fixed align issue table & update deviders

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,6 +50,13 @@ body {
     border: 0;
 }
 
+.devider-long {
+    background-color: #e8e8e8;
+    width: 90%;
+    height: 1px;
+    border: 0;
+}
+
 .content-container {
     padding-top: 15px;
     padding-bottom: 75px;
@@ -121,21 +128,13 @@ body {
 /*-----------------------------------------------------GuestHouse-*/
 
 .guesthouse {
-    background: url("../images/guesthouse.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
     border-radius: 10px;
-    min-height: 360px;
 }
 
 .guest {
     color: #ffffff;
     font-size: 1.2em;
-    padding-top: 60px;
+    margin-top: 100px;
 }
 
 /*-----------------------------------------------------Prices-*/
@@ -149,4 +148,10 @@ body {
 
 .table td, .table th {
     color: #ffffff;
+}
+
+.table {
+    width: 70%;
+    margin: auto;
+    margin-top: 35px;
 }
